# Medical_Image_Processing-Thyroid-Ultrasound-Classification

./: CMakeLists.txt  export_to_onnx.py  test_onnx_inference.py
cpp_project/: main.cpp
